using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class CameraAnimationKeyConst
{
    public static readonly string BattleCameraTransitionAnimationKey = "battle";
    public static readonly string WarriorCameraTransitionAnimationKey = "warrior";
    public static readonly string MagicianCameraTransitionAnimationKey = "magician";
    public static readonly string VibrationAnimationKey = "vibration";
    public static readonly string BlinkAnimationKey = "blink";
    public static readonly string SelfCameraAnimationKey = "selfCamera";
}
